2014-07-13  Paul Eggert  <eggert@cs.ucla.edu>

	Improve behavior of 'bzr up; cd src; make -k'.
	* Makefile.in (top_srcdir): New var.
	(ntsource, lispsource, ALL_CFLAGS, gl-stamp, emacs.res):
	Use '$(top_srcdir)' instead of '$(srcdir)/..';
	its expansion is a bit shorter.
	(../config.status): Actually build config.status instead of
	just complaining.
	(ACLOCAL_INPUTS, AUTOCONF_INPUTS):
	New macros, copied and relocated from ../Makefile.in.
	($(top_srcdir)/aclocal.m4, $(top_srcdir)/configure, config.in)
	(../config.status, Makefile): New dependencies and rules,
	copied with relocation from ../Makefile.in.  This should be more
	likely to rebuild the build machinery properly if you do a 'make'
	in the src directory.

2014-07-12  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (display_line): Don't call FETCH_BYTE with argument less
	than 1.  (Bug#17962)

	* w32fns.c (Fx_file_dialog): Mention in the doc string the
	behavior on Windows 7 and later when the function is repeatedly
	invoked with the same value of DIR.  (Bug#17950)

	* xfns.c (Fx_file_dialog) [USE_MOTIF, USE_GTK]: Update the doc
	string to match the one in w32fns.c.

	* minibuf.c (read_minibuf_noninteractive) [WINDOWSNT]: Switch
	stdin to binary mode only if it is connected to a terminal.

2014-07-11  Paul Eggert  <eggert@cs.ucla.edu>

	Coalesce extern decls.
	* minibuf.c (emacs_get_tty, emacs_set_tty, suppress_echo_on_tty):
	* sysdep.c (emacs_get_tty, emacs_set_tty):
	Move duplicate extern decls from here ...
	* systty.h: ... to here, so that there's just one copy.

2014-07-11  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (changeFont:): Add ifdef NS_IMPL_COCOA.

	* nsfns.m (Fns_popup_font_panel): Ditto.

2014-07-11  Eli Zaretskii  <eliz@gnu.org>

	* minibuf.c (read_minibuf_noninteractive): Finish reading on '\r',
	not only on '\n'.
	[WINDOWSNT]: Switch stdin to binary mode when not echoing input.

	* sysdep.c (emacs_get_tty, emacs_set_tty, suppress_echo_on_tty)
	[DOS_NT]: Implement for WINDOWSNT.
